# flask_react-notes_app

./: README.md
apps/Client/: index.html  package-lock.json  package.json  tailwind.config.js
apps/Client/src/: App.jsx  index.css  main.jsx
apps/Client/src/components/: ConfirmModal.jsx  FluidArrow.jsx  Navigation.jsx  NewPageModal.jsx  NoteEditor.jsx  NoteList.jsx  ProfileMenu.jsx  Sidebar.jsx
apps/Client/src/context/: ToastContext.jsx
apps/Client/src/pages/: AuthPage.jsx
apps/Client/src/services/: api.js
apps/Client/src/store/: authSlice.js  index.js  noteSlice.js  workspaceSlice.js
apps/Server/: main.py  pyproject.toml  requirements.txt
apps/Server/src/Config/: db_config.py
apps/Server/src/Controllers/: auth_controller.py  notes_controller.py  workspace_controller.py
apps/Server/src/Middlewares/: auth_middleware.py
apps/Server/src/Models/: notes_model.py  user_model.py  workspace_model.py
apps/Server/src/Routes/: auth_routes.py  notes_routes.py  workspace_routes.py
apps/Server/src/Services/: auth_service.py  notes_service.py  workspace_service.py
