[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-jwt-extended>=4.7.4",
    "mongoengine>=0.29.3",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
]

[tool.pyright]
extraPaths = ["."]
